--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night-eighties # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : https://www.kaeee.de # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : https://blog.nonbanana.com # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : kaeee.de
+title   : nonbanana
 description: > # this means to ignore newlines until "Language & timezone"
   Your Site Description
 
@@ -38,7 +38,7 @@ author:
   name      : 쩨카
   url       : 
   avatar    : # path or url of avatar image (square)
-  bio       : 그냥 이것저것 올려요
+  bio       : 
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
@@ -49,13 +49,13 @@ author:
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : mbin96 # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  github    : nonbanana # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: mbin96/mbin96.github.io
+repository: nonbanana/nonbanana.github.io
 repository_tree: master
 
 
