--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,25 +26,25 @@ header:
 
   - titles:
       # @start locale config
-      en      : &EN       About
+      en      : &EN       github
       en-GB   : *EN
       en-US   : *EN
       en-CA   : *EN
       en-AU   : *EN
-      zh-Hans : &ZH_HANS  关于
+      zh-Hans : &ZH_HANS  github
       zh      : *ZH_HANS
       zh-CN   : *ZH_HANS
       zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  關於
+      zh-Hant : &ZH_HANT  github
       zh-TW   : *ZH_HANT
       zh-HK   : *ZH_HANT
-      ko      : &KO       소개
+      ko      : &KO       github
       ko-KR   : *KO
-      fr      : &FR       À propos
+      fr      : &FR       github
       fr-BE   : *FR
       fr-CA   : *FR
       fr-CH   : *FR
       fr-FR   : *FR
       fr-LU   : *FR
       # @end locale config
-    url: /about.html
+    url: https://github.com/nonbanana
